--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ body{
     
   }
 
+  h4{
+    font-family: 'Helvetica Neue', sans-serif; 
+    text-align: center;
+    color: #949494;
+    
+  }
+
   button{
     position: absolute;
     left: 42%;
@@ -59,7 +66,7 @@ body{
     top: 15%;
     right: 0;
     left: 0;
-    width: 619px;
+    width: 45%;
     display: table;
     margin: 0 auto;
     transform: translateY(-50%);
@@ -75,7 +82,7 @@ nav a
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-    padding: 10px 15px;
+    padding: 3% 2%;
     transition: 0.2s ease color;
 }
 
@@ -90,10 +97,10 @@ nav a:before, nav a:after
 
 nav a:before
 {
-    top: 0;
-    left: 10px;
-    width: 6px;
-    height: 6px;
+    top: 3%;
+    left: 3%;
+    width: 1.5%;
+    height: 5%;
 }
 
 nav a:after
@@ -175,7 +182,7 @@ nav a:nth-child(3):hover ~ #indicator
 
 #ytd-url {
   display: block;
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   padding: 10px 14px;
@@ -190,9 +197,17 @@ nav a:nth-child(3):hover ~ #indicator
   z-index: 125;
 }
 
-img { position : relative ; top: 40px;
-  left: px; }
-  
-  button:hover:before {
-    height: 120px;
-  }
+img {
+   margin: 3% ;
+   position: center;
+ }
+    #footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    padding: 10px; /* Поля вокруг текста */
+    background: #2f2f2f; /* Цвет фона */
+    color: #868686; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+    font-family: 'Helvetica Neue', sans-serif;
+
+   }
